--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     <link rel="stylesheet" href="css/fonts.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    <!-- TODO: REMOVE THIS AFTER THE FINAL SHOWCASE -->
-    <link rel="stylesheet" type="text/css" href="css/popup.css">
+    <!-- USED THIS FOR FINAL SHOWCASE -->
+    <!--<link rel="stylesheet" type="text/css" href="css/popup.css">-->
   </head>
   <body>
     <div class="load">
-      <div class='inner'>
-        <img src="img/final-showcase-popup.png">
-        <a href="https://docs.google.com/forms/d/1iwi6NOB05gZfsjk9zidTDlnIZIgYOLGG0Ahv3OnVPMY/viewform"></a>
-      </div>
+      <!-- USED THIS FOR FINAL SHOWCASE -->
+      <!--<div class='inner'>-->
+        <!--<img src="img/final-showcase-popup.png">-->
+        <!--<a href="https://docs.google.com/forms/d/1iwi6NOB05gZfsjk9zidTDlnIZIgYOLGG0Ahv3OnVPMY/viewform"></a>-->
+      <!--</div>-->
 
-      <a href='#' onclick="$('.load').hide();"><img src="img/x.png" class='close-popup'></a>
+      <!--<a href='#' onclick="$('.load').hide();"><img src="img/x.png" class='close-popup'></a>-->
 
-      <!-- REMOVED THESE FOR THE FINAL SHOWCASE -->
-      <!-- <img src="img/optimize_logo.png" class="loadLogo"/> -->
-      <!-- <img src="img/ring.svg" class="loading"/> -->
+       <img src="img/optimize_logo.png" class="loadLogo"/> 
+       <img src="img/ring.svg" class="loading"/> 
     </div>
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
